testdata/baselines/reference/submodule/conformance/jsdocOuterTypeParameters1.errors.txt
jsdocOuterTypeParameters1.js(1,14): error TS2304: Cannot find name 'T'.
jsdocOuterTypeParameters1.js(1,14): error TS8010: Type annotations can only be used in TypeScript files.
jsdocOuterTypeParameters1.js(7,35): error TS2339: Property 'foo' does not exist on type 'Bar'.


==== jsdocOuterTypeParameters1.js (3 errors) ====
    /** @return {T} */
                 ~
!!! error TS2304: Cannot find name 'T'.
                 ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const dedupingMixin = function(mixin) {};
    
     /** @template {T} */
    const PropertyAccessors = dedupingMixin(() => {
      class Bar {
        static bar() { this.prototype.foo(); }
                                      ~~~
!!! error TS2339: Property 'foo' does not exist on type 'Bar'.
      }
    });
    
    